[package]
name = "tool-sync"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "A CLI tool to manage other installed tools easily."

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
ureq = { version = "2.5.0", features = ["json"] }

dirs = "4.0.0"
flate2 = "1.0"
tar = "0.4.38"
tempdir = "0.3.7"
toml = "0.5.9"