[package]
name = "tool-sync"
version = "0.1.0"
authors = ["Dmitrii Kovanikov <kovanikov@gmail.com>"]
license = "MPL-2.0"
description = """
tool-sync is a CLI tool that manages installation of other CLI tools from GitHub
Releases by downloading binaries and storing them in a local directory.
"""
readme = "README.md"
homepage = "https://github.com/chshersh/tool-sync"
repository = "https://github.com/chshersh/tool-sync"
keywords = ["cli", "sync", "download", "tools"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
ureq = { version = "2.5.0", features = ["json"] }
zip = { version = "0.6.2", default-features = false, features = ["deflate"] }

console = "0.15.1"
dirs = "4.0.0"
flate2 = "1.0"
indicatif = "0.17.0"
shellexpand = "2.1.2"
tar = "0.4.38"
tempdir = "0.3.7"
toml = "0.5.9"